# llm-images-eval

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: visdrone_qwen_example.ps1
scripts/: recover_qwen_raw_coords.py  test_vlm.py
src/: __init__.py  __main__.py  coco_io.py  eval_coco.py  image_ops.py  parsing.py  predict.py  prompts.py  visdrone_paths.py  visualize.py  vlm_client.py
src/tools/: __init__.py  visdrone_to_coco.py
tests/: test_resume_and_visdrone.py
