[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-images-eval"
version = "0.1.0"
description = "Evaluate VLM object detection outputs with COCO metrics."
requires-python = ">=3.10"
dependencies = [
  "openai>=1.55.0",
  "Pillow>=10.0.0",
  "pycocotools>=2.0.7",
  "PyYAML>=6.0.1",
  "tqdm>=4.66.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_images_eval*"]
